make sure users are able to scroll in the sidebar without the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,4 +127,11 @@ body {
     background-size: 4rem 4rem;
     opacity: 0.05;
   }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
